# ivy

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  build-wasm.sh  index.html
.github/workflows/: deploy-demo.yml  release.yml  test.yml  update-snapshots.yml
assets/: sample.yaml
docs/: faq.md  getting-started.md  vn-engine-comparison.md  yaml-syntax.md
docs/feature-plans/: README.md  accessibility.md  cloud-save.md  community-modding.md  dev-tools.md  dynamic-camera.md  layered-audio.md  live2d.md  modular-characters.md  nvl-mode.md  spine.md  video-background.md
docs/visual-editor/: README.md  phase-5.1-command-editor.md  phase-5.2-flowchart.md  phase-5.3-preview.md  phase-5.4-drag-and-drop.md  phase-5.5-asset-management.md
editors/ivy-editor/: eslint.config.js  package-lock.json  package.json
editors/ivy-editor/src-tauri/: Cargo.toml  tauri.conf.json
editors/ivy-editor/src-tauri/src/: lib.rs  main.rs
editors/ivy-editor/src-tauri/src/commands/: assets.rs  character.rs  export.rs  flowchart.rs  mod.rs  playtest.rs  preview.rs  project.rs  savedata.rs  scenario.rs
editors/ivy-editor/src-tauri/src/playtest/: mod.rs  session.rs
editors/ivy-editor/src-tauri/src/templates/: web_index.html
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
src/: cache.rs  lib.rs  main.rs  types.rs
src/accessibility/: mod.rs
src/audio/: mod.rs
src/flowchart/: builder.rs  layout.rs  mod.rs  types.rs
src/game/: actions.rs  config.rs  initialization.rs  mod.rs  mode.rs
src/hotreload/: mod.rs
src/i18n/: localized.rs  mod.rs
src/input/: gamepad.rs  mod.rs
src/modding/: mod.rs  types.rs
src/platform/: mod.rs
src/render/: achievement.rs  backlog.rs  camera.rs  chapter_select.rs  character.rs  cinematic.rs  debug.rs  flowchart.rs  gallery.rs  image.rs  input.rs  lipsync.rs  mod.rs  modular_char.rs  nvl.rs  particles.rs  settings.rs  shake.rs  text.rs  title.rs  transition.rs  typewriter.rs  ui.rs  video.rs  widgets.rs
src/runtime/: achievements.rs  chapters.rs  display.rs  keybinds.rs  mod.rs  read_state.rs  save.rs  state.rs  unlocks.rs  variables.rs  visual.rs
src/scenario/: easing.rs  mod.rs  parser.rs  position.rs  types.rs  validator.rs
src/video/: mod.rs  native.rs  stub.rs  wasm.rs
tests/: achievements_test.rs  chapters_test.rs  easing_test.rs  integration_test.rs  keybinds_test.rs  modding_test.rs  parser_test.rs  save_test.rs  settings_test.rs  snapshot_test.rs  state_test.rs  unlocks_test.rs  validator_test.rs  variables_test.rs
tests/common/: mod.rs
tests/e2e/: package-lock.json  package.json  playwright.config.ts
tests/fixtures/: achievements.yaml  ambient.yaml  audio.yaml  camera.yaml  chapters.yaml  char_idle.yaml  choices.yaml  easing.yaml  effects.yaml  full_scenario.yaml  minimal.yaml  modular_char.yaml  multi_character.yaml  multiple_chars.yaml  nvl_mode.yaml  text_formatting.yaml  timed_choice.yaml  timed_choices.yaml  variables.yaml  video_bg.yaml  visual.yaml
tests/snapshots/: snapshot_test__audio_bgm_continue.snap  snapshot_test__audio_bgm_start.snap  snapshot_test__audio_se.snap  snapshot_test__audio_voice.snap  snapshot_test__display_char_bob.snap  snapshot_test__display_char_left.snap  snapshot_test__display_char_right.snap  snapshot_test__display_char_single_center.snap  snapshot_test__display_chars_multiple.snap  snapshot_test__display_chars_three.snap  snapshot_test__display_effect_fade.snap  snapshot_test__display_effect_shake.snap  snapshot_test__display_minimal.snap  snapshot_test__display_text_color.snap  snapshot_test__display_text_nested_color.snap  snapshot_test__display_text_ruby.snap  snapshot_test__display_timed_regular.snap  snapshot_test__display_timed_with_timeout.snap  snapshot_test__display_variables.snap  snapshot_test__display_visual_1.snap  snapshot_test__display_visual_2.snap  snapshot_test__display_visual_3.snap  (+11 more)
(+127 files in other folders)
