[package]
name = "ivy"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = "6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[dev-dependencies]
insta = { version = "1.34", features = ["yaml"] }
