[package]
name = "ivy"
version = "0.1.0"
edition = "2024"

[features]
default = []
video = ["video-rs"]

[dependencies]
macroquad = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = "6"
gamepads = "0.1"
video-rs = { version = "0.9", optional = true }
tiny_http = "0.12"
tungstenite = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Document",
    "HtmlVideoElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "HtmlElement",
    "Element",
    "CssStyleDeclaration",
    "MediaError",
    "Navigator",
    "Clipboard",
    "SpeechSynthesis",
    "SpeechSynthesisUtterance",
] }
js-sys = "0.3"

[[bin]]
name = "ivy-validate"
path = "src/bin/validate.rs"

[[bin]]
name = "ivy-preview"
path = "src/bin/preview.rs"

[dev-dependencies]
insta = { version = "1.34", features = ["yaml"] }
