[package]
name = "ivy-editor"
version = "0.1.0"
description = "Visual editor for ivy visual novel engine"
authors = ["dqn"]
edition = "2021"

[lib]
name = "ivy_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"

# Reference the main ivy crate for type reuse
ivy = { path = "../../.." }
base64 = "0.22"

